tests/NormalTests/paczka1/fuzzy1/47892679.err
Error in line 9: e8X S387 -3,6
Error in line 6: XStRWKbDg A902 88,0
Error in line 11: e8X S387 25,5
Error in line 3: SgbuD4wPnop A902 517,2
Error in line 18: XStRWKbDg S565 65,0
Error in line 17: e8X S565 27,7
Error in line 23: XStRWKbDg A902 10,1
Error in line 36: BQWoKxNii S387 -2,4
Error in line 34: BQWoKxNii S387 78,5
Error in line 39: S565 S218 42,8
